Image Overflow Fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -11394,13 +11394,15 @@ section {
   height: 100%;
 }
 
-section.cta {
-  position: relative;
-  padding: 15rem 0;
-  background-image: url('../assets/img/1.jpeg');
-  background-position: center;
-  background-size: cover;
+#ctaimg{
+  opacity: 100%;
+  cursor: pointer;
 }
+
+#ctaimg:hover{
+  opacity: 75%;
+}
+
 section.cta .cta-content {
   position: relative;
   z-index: 1;
@@ -11412,7 +11414,7 @@ section.cta:before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  
 }
 
 .icon-feature {
